# orcaslicer-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  backends.py  pyproject.toml  server.py  test_direct_import.py  test_fixtures.py  test_server.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/claude/: PROTOCOL.md  PUBLISH-CHECKLIST.md  STATUS.md
orcaslicer_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: cube.stl
