[project]
name = "orcaslicer-mcp"
version = "0.3.0"
description = "MCP server for OrcaSlicer: headless slicing, profile management, G-code analysis, and printer control (Klipper/Moonraker, OctoPrint, PrusaLink, Duet, Elegoo, Bambu)"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.27",
    "pycentauri>=0.7",
]

[project.optional-dependencies]
bambu = ["bambulabs-api>=2.6"]
